# Chat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Client/: CMakeLists.txt  addClass.sh  run.sh
Client/include/: Client.hpp  example.hpp
Client/src/: ChatClient.cpp  Client.cpp  ClientMain.cpp  client.cpp  example.cpp
Client/tests/: CMakeLists.txt  ClientsTests.cpp  ExampleTests.cpp
Frontend/: app.js  chatpage.css  chatpage.html  index.css  index.html  login.css  login.html  main.js  package.json  pure.html  styles.css  test.css  test.html
Server/: CMakeLists.txt
Server/include/: ChatModel.hpp  ClientSession.hpp  MessageModel.hpp  Server.hpp  UserModel.hpp  connector.hpp
Server/scripts/: addClass.sh  run.sh
Server/src/: ChatModel.cpp  ChatServer.cpp  ClientSession.cpp  MessageModel.cpp  Server.cpp  UserModel.cpp  connector.cpp
Server/tests/: CMakeLists.txt  MessageModelTests.cpp  UserModelTests.cpp  sampleTest.cpp
